--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
                 <div class="md:w-2/3 md:pl-12">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-6">Who I Am</h3>
                     <p class="text-gray-600 mb-6 leading-relaxed">
-                        I'm a passionate professional with [X] years of experience creating impactful digital solutions. My journey in [your field] began when [brief personal background story].
+                        I'm a passionate professional with 4 years of experience creating impactful digital solutions. My journey in tech field began when Steve Jobs share his vision of the future of technology. I have been working in the field of web development and design for
                     </p>
                     <p class="text-gray-600 mb-6 leading-relaxed">
-                        What drives me is [your motivation/passion]. I believe in [your professional philosophy]. When I'm not working, you can find me [personal interests/hobbies].
+                        What drives me is Steve Jobs. I believe in technology. When I'm not working, you can find me doing codes.
                     </p>
                     <p class="text-gray-600 mb-8 leading-relaxed">
                         My approach combines technical expertise with creative problem-solving to deliver solutions that are both functional and delightful to use.
