--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         I'm a passionate professional with 4 years of experience creating impactful digital solutions. My journey in tech field began when Steve Jobs share his vision of the future of technology. I have been working in the field of web development and design for
                     </p>
                     <p class="text-gray-600 mb-6 leading-relaxed">
-                        What drives me is Steve Jobs. I believe in technology. When I'm not working, you can find me doing codes.
+                        What drives me is Steve Jobs. I believe in technology. When I'm not working, you can find me doing code.
                     </p>
                     <p class="text-gray-600 mb-8 leading-relaxed">
                         My approach combines technical expertise with creative problem-solving to deliver solutions that are both functional and delightful to use.
