--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
                 </div>
                 
                 <div class="contact-form">
-                    <form action="https://formspree.io/f/xpwzgqpb" method="POST">
+                    <form action="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJfttfnNMvMnNvPrsSwvJzFNzCfJWLpvWgnShPhxzHtBFFqZRgshFQQHMHDkdxKCxZsbGQq" method="POST">
                         <div class="form-group">
                             <label for="name">Name</label>
                             <input type="text" id="name" name="name" required>
