--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2930956433728291"
-     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-2930956433728291">
     <title>Sushant Badal</title>
     <meta name="description" content="Velocynix - Leading tech innovation company founded by Sushant Badal. Specializing in web development, mobile apps, and digital solutions.">
     
