--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@
       </div>
 
       <div class="contact-card">
-        <form id="contactForm" action="#" onsubmit="handleSubmit(event)">
+        <form action="https://api.web3forms.com/submit" method="post">
+          <div class="form-group"><input type="hidden" name="access_key" value="19e7762b-aedb-43e1-b0ff-037404210ef9"></div>
           <div class="form-group"><label for="name">Name</label><input id="name" class="form-control" name="name" required></div>
           <div class="form-group"><label for="email">Email</label><input id="email" class="form-control" type="email" name="email" required></div>
           <div class="form-group"><label for="message">Message</label><textarea id="message" class="form-control" name="message" rows="6" required></textarea></div>
@@ -445,7 +446,7 @@
       const email = form.email?.value || '';
       const message = form.message?.value || '';
       // Basic validation/show toast
-      alert('Thanks '+ (name||'there') + '! Your message was received. (Demo)');
+      alert('Thanks '+ (name||'there') + '! Your message was received.');
       form.reset();
     }
 
