all-services-works-pages

--- a/index.html
+++ b/index.html
@@ -85,26 +85,37 @@
     <h2 class="section-title" id="servicesTitle">Services</h2>
     <p class="section-sub">From concept to launch — end-to-end product and engineering services.</p>
     <div class="services-grid container" id="servicesGrid">
-      <div class="card" data-tilt>
+      <a href="web-development.html">
+        <div class="card" data-tilt>
         <div class="icon" style="background:linear-gradient(135deg,var(--accent1),var(--accent2))">💻</div>
         <h3>Web Development</h3>
         <p style="color:var(--muted)">Responsive, scalable websites and web apps.</p>
       </div>
-      <div class="card" data-tilt>
+      </a>
+
+      <a href="mobile-apps.html">
+        <div class="card" data-tilt>
         <div class="icon" style="background:linear-gradient(135deg,var(--accent2),#8b5cf6)">📱</div>
         <h3>Mobile Apps</h3>
         <p style="color:var(--muted)">Cross-platform and native mobile solutions.</p>
       </div>
-      <div class="card" data-tilt>
+      </a>
+
+      <a href="cloud-devops.html">
+        <div class="card" data-tilt>
         <div class="icon" style="background:linear-gradient(135deg,#8b5cf6,#ec4899)">☁️</div>
         <h3>Cloud & DevOps</h3>
         <p style="color:var(--muted)">Scalable cloud infra, CI/CD, and deployments.</p>
       </div>
-      <div class="card" data-tilt>
+      </a>
+
+      <a href="data-ai.html">
+        <div class="card" data-tilt>
         <div class="icon" style="background:linear-gradient(135deg,#ec4899,#ef4444)">🗄️</div>
         <h3>Data & AI</h3>
         <p style="color:var(--muted)">Analytics, automation, and AI-driven features.</p>
       </div>
+      </a>
     </div>
   </section>
 
@@ -113,7 +124,8 @@
     <h2 class="section-title" id="portfolioTitle">Selected Work</h2>
     <p class="section-sub">Examples of solutions delivered for clients and partners.</p>
     <div class="portfolio-grid container">
-      <div class="project" data-tilt>
+     <a href="ecommerce.html">
+       <div class="project" data-tilt>
         <div class="project-card">
           <img src="https://images.pexels.com/photos/230544/pexels-photo-230544.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="E-Commerce Platform">
           <div class="pc-body">
@@ -123,8 +135,10 @@
           </div>
         </div>
       </div>
+     </a>
 
-      <div class="project" data-tilt>
+     <a href="saas.html">
+       <div class="project" data-tilt>
         <div class="project-card">
           <img src="https://images.pexels.com/photos/3184292/pexels-photo-3184292.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="SaaS">
           <div class="pc-body">
@@ -134,8 +148,10 @@
           </div>
         </div>
       </div>
+     </a>
 
-      <div class="project" data-tilt>
+     <a href="analytics.html">
+       <div class="project" data-tilt>
         <div class="project-card">
           <img src="https://images.pexels.com/photos/265087/pexels-photo-265087.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="Analytics">
           <div class="pc-body">
@@ -145,6 +161,7 @@
           </div>
         </div>
       </div>
+     </a>
     </div>
   </section>
 
