--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <a href="cloud-devops.html">
         <div class="card" data-tilt>
         <div class="icon" style="background:linear-gradient(135deg,#8b5cf6,#ec4899)">☁️</div>
-        <h3>Cloud & DevOps</h3>
+        <h3 style="text-decoration: none;">Cloud & DevOps</h3>
         <p style="color:var(--muted)">Scalable cloud infra, CI/CD, and deployments.</p>
       </div>
       </a>
