--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <p class="muted">I build websites, mobile app wrappers, and products that help teams automate tasks and present their best ideas to the world.</p>
 
         <div class="stats" aria-hidden="true">
-          <div class="stat"><div class="num" data-target="48">0</div><div class="label" style="color:var(--muted);margin-top:6px">Happy Clients</div></div>
-          <div class="stat"><div class="num" data-target="92">0</div><div class="label" style="color:var(--muted);margin-top:6px">Projects Completed</div></div>
+          <div class="stat"><div class="num" data-target="48">48+</div><div class="label" style="color:var(--muted);margin-top:6px">Happy Clients</div></div>
+          <div class="stat"><div class="num" data-target="92">60+</div><div class="label" style="color:var(--muted);margin-top:6px">Projects Completed</div></div>
         </div>
 
       </div>
